--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 html,body {
     font-size: 18px;
-    background-color: gainsboro;
+    background-color: black;
 }
 
 h1 {
@@ -14,6 +14,16 @@ h1 {
     font-size: 2.5em;
     font-weight: 700;
     margin: 60px 940px;
+    color: white;
+    text-shadow: 0 0 10px blue,0 0 25px blue,0 0 50px blue,0 0 75px blue;
+}
+
+
+div .container {
+  margin: 50px 400px;
+  border: solid white 5px;
+  box-shadow: inset 0 0 10px blue, 0 0 15px blue;
+  border-radius: 15px;
 }
 
 h2 {
@@ -26,6 +36,25 @@ h2 {
     align-items: center;
     justify-content: center;
     text-align: center;
+    color: white;
+    text-shadow: 0 0 5px blue,0 0 15px blue,0 0 25px blue,0 0 50px blue;
+}
+
+.parpadear {
+  animation: parpadear 1.5s infinite backwards;
+}
+
+.parpadear-titulo {
+  animation: parpadear 4s infinite backwards;
+}
+
+@keyframes parpadear {
+  to {
+    color: rgb(17, 17, 17);
+    text-shadow: none;
+
+  }
+
 }
 
 .App {
