--- a/src/hojas-de-estilo/Testimonio.css
+++ b/src/hojas-de-estilo/Testimonio.css
@@ -7,8 +7,9 @@
   align-items: center;
   justify-content: center;
   background-color: #ffffff;
-  box-shadow: 0 3px 13px 1px rgb(0, 0, 0 / 9%) ;
+  box-shadow: 0 3px 13px 1px blue;
   border-radius: 20px;
+  background: slateblue;
 }
 
 .imagen-proyecto {
@@ -41,5 +42,5 @@
 }
 
 .link-proyecto {
-  color: gray;
+  color: rgb(7, 7, 77);
 }
